tests/should_succeed/inline.jou
import "stdlib/io.jou"

@inline
def increment(x: int) -> int:
    x += 1
    return x

def main() -> int:
    x = 1
    y = increment(x)
    z = increment(y)
    printf("%d %d %d\n", x, y, z)  # Output: 1 2 3
    return 0
