tests/syntax_error/keyword_int.jou
def main() -> int:
    int = 1  # Error: expected an expression, got the 'int' keyword
    return 0
